# csf-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
apps/ios/CFSMobile/: CfsBridge.swift  ContentView.swift
apps/ios/CFSMobile.xcodeproj/: project.pbxproj
apps/ios/CFSMobile.xcodeproj/project.xcworkspace/xcuserdata/nadeem.xcuserdatad/: UserInterfaceState.xcuserstate
apps/ios/CFSMobile.xcodeproj/xcuserdata/nadeem.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/macos/: index.html
apps/macos/src-tauri/src/: main.rs
crates/cfs-canonical-embeddings/: Cargo.toml  build.rs
crates/cfs-canonical-embeddings/src/: lib.rs  model.rs  softfloat.rs  tokenizer_data.rs  tokenizer_impl.rs
crates/cfs-core/src/: context_assembler.rs  diff.rs  embedding.rs  error.rs  hlc.rs  lib.rs
crates/cfs-desktop/examples/: verify_search.rs
crates/cfs-desktop/src/: lib.rs  sync.rs  watcher.rs
crates/cfs-graph/src/: index.rs  lib.rs
crates/cfs-inference-mobile/: Cargo.toml
crates/cfs-inference-mobile/src/: lib.rs
crates/cfs-mobile/: Cargo.toml
crates/cfs-mobile/src/: lib.rs
crates/cfs-parser/src/: chunker.rs
crates/cfs-query/: Cargo.toml
crates/cfs-query/examples/: verify_llm.rs
crates/cfs-query/src/: lib.rs
crates/cfs-sync/: Cargo.toml
crates/cfs-sync/src/: crypto.rs  identity.rs
crates/cfs-tests/tests/: context.rs  sync_audit.rs
crates/cp-core/src/: chunk.rs  context_assembler.rs  document.rs
crates/cp-graph/src/: index.rs  lib.rs
crates/cp-relay-server/src/: storage.rs
docs/plans/: 2026-02-16-mac-ios-sync-implementation.md
scripts/: build_ios.sh  clean.sh  dev.sh
spec/: README.md
spec/application/: CFS-020-intelligence-interface.md  CFS-021-context-assembly.md
spec/core/: CFS-001-data-model.md  CFS-002-storage-engine.md  CFS-003-determinism.md  CP-001-data-model.md  CP-003-determinism.md
spec/protocol/: CFS-010-embedding-protocol.md  CFS-011-indexing-protocol.md  CFS-012-retrieval-protocol.md  CFS-013-sync-protocol.md
