[package]
name = "cfs-mobile"
description = "Mobile-optimized CFS core with C FFI"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cfs-core = { path = "../cfs-core" }
cfs-graph = { path = "../cfs-graph" }
cfs-sync = { path = "../cfs-sync" }
cfs-relay-client = { path = "../cfs-relay-client" }
cfs-query = { path = "../cfs-query" }
cfs-embeddings = { path = "../cfs-embeddings" }
cfs-inference-mobile = { path = "../cfs-inference-mobile" }
hex = "0.4"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
