[package]
name = "cfs-query"
description = "RAG query engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cfs-core = { path = "../cfs-core" }
cfs-graph = { path = "../cfs-graph" }
cfs-embeddings = { path = "../cfs-embeddings" }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
