[package]
name = "cfs-sync"
description = "Merkle tree, cognitive diffs, and crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cfs-core = { path = "../cfs-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }

# Crypto
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }

# Key agreement for device pairing
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"

# Encoding
hex = { workspace = true }

# Serialization
ciborium = { workspace = true }
zstd = { workspace = true }
